Tue Mar 30 17:08:58 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/indexerconnection.py: If a document is replaced with
	  store_only set, remove it from the cache.

Tue Mar 30 16:40:31 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/unittests/spell_correct_1.py: Enable an old test for a bug
	  which has long been fixed.

Wed Mar 10 15:15:41 GMT 2010  Richard Boulton <richard@tartarus.org>

	* libs/get_xapian.py: Link to new version of xapian.

Thu Mar 04 18:07:38 GMT 2010  Richard Boulton <richard@tartarus.org>

	* utils/verify_cache.py: Move cache verifier into
	  xappy.cachemanager.verify_cache, so that it'll be available in
	  installed versions of xappy.

Thu Mar 04 18:06:34 GMT 2010  Richard Boulton <richard@tartarus.org>

	* utils/verify_cache.py: Expand verification routine to check the
	  cache much more thoroughly, and report errors more clearly.

Thu Mar 04 16:39:51 GMT 2010  Richard Boulton <richard@tartarus.org>

	* utils/verify_cache.py: Add a utility to verify the integrity of a
	  cache.

Wed Feb 24 10:26:38 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/datastructures.py,xappy/unittests/calc_hash.py: Add a
	  ProcessedDocument.remove_term() method, and a brief test of it.

Tue Feb 23 00:35:35 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py: Fix the backwards compatibility
	  fallback for setting keymaker parameters to catch the correct
	  exception type.

Tue Feb 23 00:17:14 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py,xappy/unittests/sort.py: Sort document
	  with missing values in the slots to the end.

Mon Feb 22 23:38:17 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/mset_search_results.py: Support both the old and new xapian
	  APIs for getting facet values.

Mon Feb 22 23:14:54 GMT 2010  Richard Boulton <richard@tartarus.org>

	* libs/get_xapian.py: Update to latest versions of xapian (now